[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.tox]
legacy_tox_ini = """
[tox]
envlist = py36

[testenv]
deps = -rrequirements-test.txt
setenv =
    # Make sure tests will use mocked environment, in case credentials are
    # available via another mechanism
    AWS_ACCESS_KEY_ID=testing
    AWS_SECRET_ACCESS_KEY=testing
    AWS_SECURITY_TOKEN=testing
    AWS_SESSION_TOKEN=testing
commands = 
    # Need to build the C library and place it in the repo directory for the
    # tests to run correctly
    python setup.py build_ext --inplace
    nose2 --config unittest.cfg
"""
